[package]
name = "tstream"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared with libra-framework and diem
anyhow = "1.0.62"
futures = "= 0.3.24"
glob = "0.3.0"
hex = { version = "0.4.3", features = ["serde"] }
once_cell = "1.10.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
log = "0.4.17"
env_logger = "0.10"
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = "0.7.11"
url = { version = "2.2.2", features = ["serde"] }

clap = { version = "4.3.5", features = ["derive", "unstable-styles"] }
rpassword = "5.0.0"
dirs-next = "2.0"
secrecy = "0.8"
zeroize = "1.5"
num-format = "0.4"
regex = "1"
indicatif = "0.17"
config = "0.13"

cosmrs = "0.7.1"
osmosis-std = "=0.1.6"
tiny-bip39 = "0.7.0"
bip32 = "0.2"
ripemd160 = "0.9"
secp256k1 = { version = "0.22", features = ["rand"] }
reqwest = { version = "0.11", features = ["json"] }
bech32 = "0.8"
hdpath = "0.2"
k256 = { version = "0.9.4", features = ["ecdsa"] }
sha2 = "0.9"
tendermint-rpc = { version = "0.23", features = ["http-client"] }
prost = "0.10.4"
prost-types = "0.10.1"
base64 = "0.13.0"
dotenv = "0.15.0"
rayon = "1.5"
rand = "0.8"
chrono = "0.4"


